feat(models): 重构 MIC 模型并添加 DDP 支持
- 重写了 MyModel 类，移除了 ESM 相关代码，增加了 LSTM 层
- 添加了 DDP（分布式数据并行）支持，实现了多 GPU训练
- 优化了数据加载和处理流程，提高了训练效率
- 调整了模型训练和验证的逻辑，增加了早停机制

--- a/src/model_test.ipynb
+++ b/src/model_test.ipynb
@@ -98,6 +98,31 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2025-07-10T09:24:45.054302Z",
+     "start_time": "2025-07-10T09:24:44.903858Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "sequence_examples",
+   "id": "d51def0eb712e922",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sequence_examples' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43msequence_examples\u001B[49m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'sequence_examples' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2025-07-10T08:00:52.113995Z",
      "start_time": "2025-07-10T08:00:52.106422Z"
     }
